--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>For My Valentine 💖</title>
 
 <style>
+/* BODY & FULL SCREEN */
 html, body{
   margin:0;
   padding:0;
@@ -22,7 +23,6 @@ html, body{
   width:100%;
   height:100%;
   position:relative;
-  display:flex;
   justify-content:center;
   align-items:center;
   flex-direction:column;
@@ -60,7 +60,7 @@ button:hover{
   transform:scale(1.1);
 }
 
-/* YES NO */
+/* YES NO BUTTON */
 #noBtn{
   position:absolute;
 }
@@ -133,7 +133,7 @@ button:hover{
   height:100%;
 }
 
-/* GLOW */
+/* GLOW EFFECT */
 .glow{
   animation:glowbg 2s ease-in-out infinite alternate;
 }
@@ -142,7 +142,7 @@ button:hover{
   to{background:#ff9ac2;}
 }
 
-/* FALL ANIMATION */
+/* FALLING ANIMATION */
 @keyframes fall{
   0%{transform:translateY(-50px);opacity:1;}
   100%{transform:translateY(100vh);opacity:0;}
